--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,14 +1,18 @@
 html {
     height: 100%;
+    align: middle;
 }
 
 body {
   text-align: center;
   background-color: white;
-  color: green;
+  color: #007280;
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 90%;
+  padding: 5%;
+  font-family: monospace;
+
 }
 
 .active {
@@ -16,17 +20,91 @@ body {
 }
 
 .footer {
-  max-width: 99%;
-  height: auto;
-  padding: 5%;
-  flex: 0 0 auto;
+  max-width: 100%;
+  max-height: 7%;
+  margin: 0px;
+  padding: 0px;
+  position: sticky;
+  bottom: -1px;
+  align-self: center;
 }
 
 .navigation {
-  flex: 0 0 auto;
-  position: top fixed;
+  /*background: green;
+  border-bottom: 1px solid #989EA4;
+  border-top: 1px solid #717D85;
+  color: #FFF;*/
+  /*font: bold 18px/21px Helvetica, Arial, sans-serif;*/
+  /*margin: 0;*/
+  background-color: white;
+  padding: 2px 0 0 2px;
+  position: -webkit-sticky;
+  position: sticky;
+  z-index: 1;
+  top: -1px;
+  height: 10%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.nav-pills>li.active>a, .nav-pills>li.active>a:focus, .nav-pills>li.active>a:hover {
+  color: #fff;
+  background-color: #673AB7;
+}
+
+.nav nav-pills {
+  margin-left: 20%;
+  margin-right: 20%;
+}
+
+.nav {
+  padding: 0px;
+}
+
+li {
+  width: 15em;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+a {
+  color: #673AB7;
+  text-decoration: none;
+  width: 10em;
+}
+
+ul {
+  padding: 0px;
 }
 
 .main-content {
-  flex: 1 0 auto;
+
+  top: 0px;
+  z-index: 2;
+  min-height: 60px;
+  max-width: 100%;
+  margin-right: 0px;
+}
+
+button {
+  border-radius: 4px;
+  width: 5em;
+  padding: 10px;
+  color: #fff;
+  background-color: rgb(132, 43, 119);
+}
+
+.form-group {
+  max-width: 70%;
+}
+
+.form-horizontal {
+  margin-left: 15%;
+  margin-right: 15%;
+}
+
+.footer-image {
+  height: auto;
+  max-height: 10em;
+  max-width: 100%;
 }
