--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,7 +10,7 @@ body {
   display: flex;
   flex-direction: column;
   height: 90%;
-  padding: 5%;
+  padding: 1%;
   font-family: monospace;
 
 }
@@ -47,19 +47,59 @@ body {
   margin-right: auto;
 }
 
-.nav-pills>li.active>a, .nav-pills>li.active>a:focus, .nav-pills>li.active>a:hover {
+.navbar-header {
+  font-size: 1.5em;
+}
+
+.navbar-inverse {
+    background-color: #fff;
+    border-color: #fff;
+    color: #007280;
+}
+
+.navbar-inverse .navbar-toggle {
+    background-color: #007280;
+}
+
+navbar.less:579
+.navbar-inverse .navbar-toggle {
+    border-color: #fff;
+
+}
+
+.navbar-inverse .navbar-toggle .icon-bar {
+    background-color: #fff;
+}
+
+.navbar-inverse .navbar-toggle {
+    /* border-color: #333; */
+    width: 2em;
+    border: none;
+}
+
+.navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:focus, .navbar-inverse .navbar-nav>.active>a:hover {
+    color: #FF5722;
+    background-color: #007280;
+}
+
+.navbar {
+  margin-bottom: 0px;
+}
+
+
+/*.nav-pills>li.active>a, .nav-pills>li.active>a:focus, .nav-pills>li.active>a:hover {
   color: #fff;
   background-color: #673AB7;
-}
+}*/
 
-.nav nav-pills {
+/*.nav nav-pills {
   margin-left: 20%;
   margin-right: 20%;
-}
+}*/
 
-.nav {
+/*.nav {
   padding: 0px;
-}
+}*/
 
 li {
   width: 15em;
@@ -86,6 +126,11 @@ ul {
   margin-right: 0px;
 }
 
+.main-image {
+  width: 100%;
+  height: auto;
+}
+
 button {
   border-radius: 4px;
   width: 5em;
@@ -99,8 +144,10 @@ button {
 }
 
 .form-horizontal {
-  margin-left: 15%;
+  margin-left: 31%;
   margin-right: 15%;
+  text-align: center;
+  align-content: center;
 }
 
 .footer-image {
